# SysY-to-LoongArch64

./: .gitignore  CMakeLists.txt  compile.sh  readme.md  sysyc.cpp
include/asm/: AsmEmitter.h  AsmPeepholeOptimizer.h
include/checker/: Checker.h
include/common/: ConstValue.h  ErrorReporter.h  Type.h
include/ir/: IR.h  IRGenerator.h  IROptimizer.h
parser/: SysY.g4  clean_and_generate.sh
src/asm/: AsmEmitter.cpp  AsmPeepholeOptimizer.cpp
src/checker/: BasicChecker.cpp  DeclChecker.cpp  ExpChecker.cpp  FuncChecker.cpp  StmtChecker.cpp
src/common/: ErrorReporter.cpp
src/ir/: IR.cpp  IRGenerator.cpp  IROptimizer.cpp
test/asmautotest/: build_and_run_one_s_test.sh  build_and_run_one_test.sh  build_and_run_tests.sh  loongarch64_build_and_run_one_ll_test.sh  loongarch64_build_and_run_tests.sh  main.cpp  run_one_s_test.sh  run_one_test.sh  run_one_test_on_loongarch64.sh  run_tests.sh  run_tests_on_loongarch64.sh
test/asmautotest/critical_cases/: 04_arr_defn3.ll  (+25 more)
test/autotest/: CMakeLists.txt  generate_sysy_test.py  loongarch64_build_and_run_diff_test.sh  main.cpp  run_diff_test.sh  run_perf_test.sh  run_tests_on_loongarch64.sh
test/autotest/perf_test_cases/: fft1.sy
test/checkercases/: test10.sy  test11.sy  test12.sy  test2.sy  test3.sy  test6.sy  test7.sy  test8.sy  test9.sy
test/irautotest/: CMakeLists.txt  build_and_run_one_test.sh  generate_sysy_test.py  iterative_computation_test.c  loongarch64_build_and_run_critical_diff_test.sh  loongarch64_build_and_run_performance_test.sh  main.cpp  matrix_multiplication_test.c  run_critical_diff_test.sh  run_diff_test.sh  run_one_test.sh  run_one_test_on_loongarch64.sh  run_perf_test.sh  run_performance_test.sh  run_tests.sh  run_tests_on_loongarch64.sh  sylib.s  sysy_float_perf_test.c
test/ircases/: test1.sy  test2.sy  test3.sy  test4.sy  test5.sy
test/iroptautotest/: build.sh  generate_perf_test.py  loongarch64_build_and_run_one_test.sh  main.cpp  run_one_ll_test_on_loongarch64.sh  run_one_test_on_loongarch64.sh
(+11 files in other folders)
